<resources>
    <string name="app_name">PickleProject</string>

    <string name="hello_world">Hello World!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_unused_goods">Unused_goods</string>
    <string name="title_pick">PICK</string>
    <string name="title_activity_pick">Pick</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_picklist">picklist</string>
    <string name="title_activity_pick_list">pickList</string>
    <string name="title_activity_pick_recycled">pickRecycled</string>
    <string name="title_activity_pick_green">pickGreen</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="usernameText">username</string>
    <string name="description">DESCRIPTION</string>
    <string name="next">NEXT</string>
    <string name="emailText">e-mail</string>
    <string name="passwordText">password</string>
    <string name="passwordConfirmationText">confirm password</string>
    <string name="signUpText">SIGN UP</string>
    <string name="joinPickleText">JOIN PICKLE</string>
    <string name="phone">phone</string>
    <string name="title_activity_individual_trash_info">individual_trash_info</string>
    <string name="title_activity_thrower_info">Thrower_Info</string>
    <string name="back">BACK</string>
    <string name="editProfile">EDIT PROFILE</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="ProfilePicture">profilePicture</string>
    <string name="PoinText">POINTS</string>
    <string name="TotalPointText">totalPoints</string>
    <string name="TotalPointLeftText">__ points left to the next level!</string>
    <string name="LeaderBoardText">LEADERBOARD</string>
    <string name="EditProfileText">EDIT PROFILE</string>
    <string name="SignOutText">SIGN OUT</string>
    <string name="title_activity_throw_category">throwCategory</string>
    <string name="title_activity_report_success">reportSuccess</string>
    <string name="title_activity_unused_goods_dialog">unusedGoodsDialog</string>
    <string name="title_activity_add_description">add_description</string>
    <string name="title_activity_throw_or_report">Throw_or_Report</string>
    <string name="title_activity_login">login</string>
    <string name="LocationText">LOCATION</string>
    <string name="profileText">PROFILE</string>
    <string name="configurationButton">configurationButton</string>
    <string name="title_activity_other_trash_dialog" />
    <string name="SettingText">SETTINGS</string>
    <string name="AboutUsText">ABOUT US</string>
    <string name="TermsOfServiceText">TERMS OF SERVICE</string>
    <string name="PrivacyPolicyText">PRIVACY POLICY</string>
    <string name="BackToMyProfileText">BACK TO MY PROFILE</string>
    <string name="ClearPickleJarText">CLEAR PICKLE JAR</string>
    <string name="ChangeLanguage">CHANGE LANGUAGE</string>
    <string name="LoremIpsumText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a metus elit. Fusce congue feugiat risus, sed tempor mi ultrices nec. Ut id tempus mi. Aliquam rhoncus, orci eget convallis fermentum, augue ipsum aliquam tellus, nec semper arcu arcu blandit diam. Aliquam in nibh commodo, tempus ligula non, placerat elit. Sed semper erat felis, ut lobortis libero posuere vitae. Phasellus tristique interdum rhoncus. Phasellus porttitor malesuada ultricies. Suspendisse tempus ipsum ut arcu pellentesque, ut sagittis sapien volutpat. In lectus est, ultricies ut dolor et, molestie commodo dui. Maecenas porta sit amet elit et sodales. Duis elit purus, tincidunt ac eros vitae, gravida rutrum urna. Etiam euismod dolor eget quam pellentesque sagittis. Aenean accumsan eu sem a ultricies. Ut nunc</string>
    <string name="title_activity_modify_request_unused">Modify_request_unused</string>
    <string-array name="condition">
        <item>Good</item>
        <item>Bad</item>
        <item>New</item>
    </string-array>
    <string-array name="Waste">
        <item>Recycled</item>
        <item>General</item>
        <item>Green</item>
    </string-array>
    <string name="title_activity_modify_request_other">Modify_request_other</string>
    <string name ="loremipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        </string>
    <string name="title_activity_pick_details">pick_details</string>
    <string name="title_activity_view_article">view_article</string>
    <string name="sampleTitleText">Sample Title</string>
    <string name="newsfeedText">NEWSFEED</string>
    <string name="title_activity_edit_profile">EditProfile</string>
    <string name="phoneNumberText">phone number</string>
    <string name="title_activity_view_map">viewMap</string>
    <string name="save">SAVE</string>
    <string name="changeProfilePicture">CHANGE PROFILE PICTURE</string>
    <string name="pick">PICK</string>
    <string name="modify">MODIFY</string>
    <string name="delete">DELETE</string>
    <string name="addDescription">ADD A DESCRIPTION</string>
    <string name="wasteType">WASTE TYPE</string>
    <string name="size">SIZE</string>
    <string name="bin">BIN</string>
    <string name="title">TITLE</string>
    <string name="condition">CONDITION</string>
    <string name="details">DETAILS</string>
    <string name="submit">SUBMIT</string>
    <string name="cancel">CANCEL</string>
    <string name="success">SUCCESS</string>
    <string name="reportMessage">Your report was successfully submitted!</string>
    <string name="backHome">BACK TO HOME</string>
    <string name="unusedGoods">UNUSED GOODS</string>
    <string name="recyclableWaste">RECYCLABLE WASTE</string>
    <string name="greenWaste">GREEEN WASTE</string>
    <string name="generalWaste">GENERAL WASTE</string>
    <string name="unused">UNUSED</string>
    <string name="general">GENERAL</string>
    <string name="recycle">RECYCLE</string>
    <string name="green">GREEN</string>
    <string name="Throw">THROW</string>
    <string name="report">REPORT</string>
    <string name="getLocation">GET LOCATION</string>
    <string name="someonePick">someone picks up your request</string>
    <string name="youWill">You will be notified when</string>
    <string name="call">CALL</string>
    <string name="picklejar">PICKLE JAR</string>
    <string name="signin">SIGN IN</string>
    <string name="accountFalse">don\'t have account?</string>
    <string name="signinGoogle">SIGN IN WITH GOOGLE+</string>
    <string name="available">Available</string>
    <string name="picked">Picked</string>
    <string name="done">Done</string>
    <string name="throwOrReportText">THROW\n\nOR\n\nREPORT</string>
    <string name="jarOrNewsText">PICKLE\nJAR\n\nNEWS\nFEED</string>
    <string name="Picker">PICKER</string>
    <string name="Thrower">THROWER</string>
    <string name="title_activity_about_us">AboutUs</string>
    <string name="server_client_id">407341781526-n07e19717mjin1t4ibomc44kdrocqef7.apps.googleusercontent.com</string>
    <string name = "aboutUsText">
        <p align = "justify">PICKLE, which stands for Pick and Recycle, is a startup created by Computer Science students of
            University Of Indonesia with the help and association with Nostra Technology Company.
            Seeing that trash has became one major problem in Jakarta and it remains an unsolved one, we want to tried to make a
            new solution for this problem. To solve this problem, we want the society also to contribute to our project
            for a better Jakarta. </p>
        <br></br>
        <p align="justify">Pickle believes that by the help of this application, local citizens can have a new insight towards the danger of waste and help to contribute by managing waste properly.
            We also hoped that this project can help the life of people who contributed and makes our environment better.</p>
    </string>
</resources>
