<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_profile"
    tools:context="com.pickle.pickleproject.ProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:background="#3e4651"
        android:id="@+id/ActionBar">

        <com.pickle.pickleproject.MontserratTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="PROFILE"
            android:id="@+id/profileText"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textColor="#ffffff" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/configurationButton"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:src="@mipmap/setting_icon"
            android:tint="#d4d4d4"
            android:background="#00ffffff" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/upperPart"
        android:layout_below="@+id/ActionBar">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:contentDescription="@string/ProfilePicture" />

        <com.pickle.pickleproject.MontserratTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/usernameText"
            android:id="@+id/username"
            android:layout_marginTop="53dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <com.pickle.pickleproject.MontserratTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/emailText"
            android:id="@+id/email"
            android:layout_below="@+id/username"
            android:layout_alignRight="@+id/username"
            android:layout_alignEnd="@+id/username" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/middlePart"
        android:background="#d4d4d4"
        android:layout_below="@+id/upperPart"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="63dp">

        <com.pickle.pickleproject.MontserratTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/PoinText"
            android:id="@+id/points"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <com.pickle.pickleproject.MontserratTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/TotalPointText"
            android:id="@+id/totalPoints"
            android:layout_below="@+id/points"
            android:layout_centerHorizontal="true" />

        <com.pickle.pickleproject.MontserratTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/TotalPointLeftText"
            android:id="@+id/totalPointLeft"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/totalPoints" />

    </RelativeLayout>

    <com.pickle.pickleproject.MontserratButton
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:id="@+id/leaderBoardButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:background="#3e4651"
        android:layout_alignParentBottom="false"
        android:layout_alignParentTop="true"
        android:layout_marginTop="357dp"
        android:text="@string/LeaderBoardText"
        android:textColor="#ffffff" />

    <com.pickle.pickleproject.MontserratButton
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:id="@+id/editProfileButton"
        android:background="#00b5b5"
        android:layout_alignParentBottom="false"
        android:layout_alignParentTop="false"
        android:layout_marginTop="427dp"
        android:text="@string/EditProfileText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#ffffff" />

    <com.pickle.pickleproject.MontserratButton
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:id="@+id/signOutButton"
        android:background="#f1654c"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="497dp"
        android:text="@string/SignOutText"
        android:textColor="#ffffff" />

</RelativeLayout>
