<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_modify_request_other"
    tools:context="com.pickle.pickleproject.ModifyRequestOther">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/linearLayout6"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <com.pickle.pickleproject.MontserratTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/wasteType"
            android:id="@+id/textView13"
            android:textSize="20sp"
            android:textColor="#00B5B5"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="10dp" />

        <Spinner
            android:entries="@array/Waste"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:layout_gravity="right"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="10dp" />

    </RelativeLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/linearLayout7"
        android:layout_below="@+id/linearLayout6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <com.pickle.pickleproject.MontserratTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/size"
            android:id="@+id/textView14"
            android:textSize="20dp"
            android:textColor="#00B5B5"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="56dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText6"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/textView14"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="75dp" />

        <com.pickle.pickleproject.MontserratTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/bin"
            android:id="@+id/textView15"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"
            android:layout_alignTop="@+id/textView14"
            android:layout_toRightOf="@+id/editText6"
            android:layout_toEndOf="@+id/editText6"
            android:layout_marginRight="10dp" />
    </RelativeLayout>

    <com.pickle.pickleproject.MontserratButton
        android:layout_width="190dp"
        android:layout_height="80dp"
        android:text="@string/delete"
        android:id="@+id/button2"
        android:textColor="#FFFFFF"
        android:background="#F1654C"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <com.pickle.pickleproject.MontserratButton
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:text="@string/save"
        android:id="@+id/button3"
        android:textColor="#FFFFFF"
        android:background="#00B5B5"
        android:layout_alignTop="@+id/button2"
        android:layout_toRightOf="@+id/button2"
        android:layout_toEndOf="@+id/button2" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#3E4651"
        android:id="@+id/relativeLayout11">

        <com.pickle.pickleproject.MontserratTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/modify"
            android:id="@+id/textView19"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/backButton"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="#00FFFFFF"
            android:src="@mipmap/backicon" />

    </RelativeLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:id="@+id/editText5"
        android:layout_above="@+id/linearLayout6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <com.pickle.pickleproject.MontserratTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/description"
        android:id="@+id/textView12"
        android:textSize="20dp"
        android:textColor="#00B5B5"
        android:layout_above="@+id/editText5"
        android:layout_alignLeft="@+id/editText5"
        android:layout_alignStart="@+id/editText5" />

</RelativeLayout>
