<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_other_trash_dialog"
    tools:context="com.pickle.pickleproject.OtherTrashDialog"
    android:id="@+id/backgroundLayout">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/blackoverlay"></RelativeLayout>

    <RelativeLayout
        android:layout_width="290dp"
        android:layout_height="290dp"
        android:background="@color/white"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/detailsLayout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/darkgray"
            android:id="@+id/detailsBar" >

            <com.pickle.pickleproject.MontserratTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/details"
                android:id="@+id/detailsText"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textSize="24sp"
                android:textColor="@color/white" />
        </RelativeLayout>

        <com.pickle.pickleproject.MontserratButton
            android:layout_width="290dp"
            android:layout_height="70dp"
            android:text="@string/submit"
            android:id="@+id/submitButtonOtherWaste"
            android:background="@color/green"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="#FFFFFF"
            android:textSize="17sp" />

        <com.pickle.pickleproject.MontserratTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/title"
            android:id="@+id/titleTextOtherWaste"
            android:layout_below="@+id/detailsBar"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="18dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="18dp" />

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/editText4"
            android:layout_below="@+id/titleTextOtherWaste"
            android:layout_alignLeft="@+id/titleTextOtherWaste"
            android:layout_alignStart="@+id/titleTextOtherWaste"
            android:singleLine="true" />

        <com.pickle.pickleproject.MontserratTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/condition"
            android:id="@+id/conditionTextOtherWaste"
            android:layout_marginTop="23dp"
            android:layout_below="@+id/editText4"
            android:layout_alignLeft="@+id/editText4"
            android:layout_alignStart="@+id/editText4" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/conditionSpinner"
            android:layout_above="@+id/submitButtonOtherWaste"
            android:layout_alignRight="@+id/editText4"
            android:layout_alignEnd="@+id/editText4"
            android:layout_marginLeft="280dp"
            android:entries="@array/condition"
            android:layout_marginBottom="10dp" />
    </RelativeLayout>

</RelativeLayout>
