<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pickle.pickleproject.ConfigurationActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:id="@+id/ActionBar"
        android:background="@color/darkgray">

        <com.pickle.pickleproject.MontserratTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/profileText"
            android:id="@+id/profileText"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/configurationButton"
            android:src="@mipmap/setting_icon"
            android:background="@color/transparent"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:tint="#ffffff"
            android:contentDescription="@string/configurationButton"
            android:layout_marginRight="5dp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/backButton"
            android:background="@color/transparent"
            android:src="@mipmap/backicon"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/contentArea"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ActionBar"
        android:layout_above="@+id/menuButtonArea"
        android:gravity="center">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/tinypickle"
            android:src="@drawable/pea"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/contentArea"
            android:layout_centerHorizontal="true" />

        <com.pickle.pickleproject.MontserratTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/username"
            android:layout_below="@+id/tinypickle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp" />

        <com.pickle.pickleproject.MontserratTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/email"
            android:layout_below="@+id/username"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/menuButtonArea"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="true">

        <com.pickle.pickleproject.MontserratButton
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/EditProfileText"
            android:id="@+id/editProfileButton"
            android:background="@color/green"
            android:textColor="@color/white" />

        <com.pickle.pickleproject.MontserratButton
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/SignOutText"
            android:id="@+id/signOutButton"
            android:layout_below="@+id/editProfileButton"
            android:background="@color/red"
            android:textColor="@color/white" />

    </RelativeLayout>

</RelativeLayout>