<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_report_success"
    tools:context="com.pickle.pickleproject.ReportSuccess"
    android:background="@color/darkgray"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center">

        <com.pickle.pickleproject.MontserratTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/success"
            android:id="@+id/successText"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:gravity="center"/>

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:id="@+id/reportImage"
            android:src="@drawable/reportsuccess"
            android:layout_below="@+id/successText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/successReportText"
            android:gravity="center"
            android:layout_below="@+id/reportImage"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:text="@string/reportMessage" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="140dp">

        <com.pickle.pickleproject.MontserratButton
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:id="@+id/backToHomeButton"
            android:textSize="20sp"
            android:background="@color/red"
            android:textColor="@color/white"
            android:text="@string/backHome"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <com.pickle.pickleproject.MontserratButton
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="SHARE"
            android:id="@+id/shareButton"
            android:layout_above="@+id/backToHomeButton"
            android:layout_centerHorizontal="true"
            android:background="@color/green"
            android:textSize="20sp"
            android:textColor="@color/white" />
    </RelativeLayout>

</LinearLayout>
